# requests-and-offers

./: .gitignore  .windsurfrules  Cargo.toml  LICENSE.md  README.md  TASK.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  specs.md  update-imports.sh
.github/workflows/: test.yaml
dnas/requests_and_offers/utils/: Cargo.toml
dnas/requests_and_offers/utils/src/: dna_properties.rs  errors.rs  lib.rs  types.rs
dnas/requests_and_offers/workdir/: dna.yaml
dnas/requests_and_offers/zomes/coordinator/administration/: Cargo.toml
dnas/requests_and_offers/zomes/coordinator/administration/src/: _administration.rs  _person_administration.rs  administration.rs  administrator.rs  external_calls.rs  lib.rs  person_administration.rs  status.rs
dnas/requests_and_offers/zomes/integrity/users/: Cargo.toml
dnas/requests_and_offers/zomes/integrity/users/src/: lib.rs  status.rs  user.rs
dnas/requests_and_offers/zomes/integrity/users/src/tests/: status.rs
dnas/utils/: Cargo.toml
dnas/utils/src/: dna_properties.rs  lib.rs  progenitor.rs
documentation/: README.md  hrea-mapping.md  specifications.md
documentation/demo/demo 1/: demo-profile-zome.md
documentation/guides/: README.md  contributing.md  getting-started.md  installation.md
documentation/specifications/: README.md  features.md  mvp.md  roles.md  technical.md  use-cases.md
documentation/technical/: README.md
documentation/technical/architecture/: hrea-integration.md
documentation/technical/zomes/: README.md  administration.md  users.md  users_organizations.md
documentation/technical/zomes/organizations/: organizations.md
documentation/zomes/: administration.md  users.md
scripts/: update-administration-store.sh
tests/: package.json  types.d.ts
tests/src/requests_and_offers/: utils.ts
tests/src/requests_and_offers/administration/: administration.test.ts  common.ts
tests/src/requests_and_offers/misc/: misc.test.ts
tests/src/requests_and_offers/organizations/: common.ts  organizations.test.ts
tests/src/requests_and_offers/ping/: ping.test.ts
tests/src/requests_and_offers/profiles/: common.ts  individual-profile.test.ts  indiviual-profile.test.ts  profiles.test.ts
tests/src/requests_and_offers/users/: common.ts  users.test.ts
ui/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  zip.js  zip.ts
ui/src/: App.svelte  app.html  app.postcss  contexts.ts  happening-theme.ts  happening_theme.ts  types.d.ts
ui/src/lib/: ActionBar.svelte  AdminMenuLinks.svelte  AdminSideBar.svelte  CreateProfileBtn.svelte  MenuLink.svelte  MenuLinks.svelte  NavBar.svelte  NavButton.svelte  UsersTable.svelte  types.ts
ui/src/lib/dialog/: PromptModal.svelte
ui/src/lib/dialogs/: AlertModal.svelte  ConfirmModal.svelte  PromptModal.svelte
ui/src/lib/drawers/: AdminMenuDrawer.svelte  MenuDrawer.svelte
ui/src/lib/modals/: AddAdministratorModal.svelte  AddOrganizationCoordinatorModal.svelte  AddOrganizationMemberModal.svelte  EditProfileModal.svelte  MemberManagementModal.svelte  OrganizationDetailsModal.svelte  ProfileDetailsModal.svelte  (+3 more)
ui/src/mocks/: index.ts
ui/src/profiles/: profiles.store.ts  types.ts
ui/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
ui/src/services/: HolochainClientService.svelte.ts  HolochainClientService.ts  client.service.ts
ui/src/stores/: administration.store.svelte.ts  administration.store.ts  administrators.store.ts  administrators.svelte.ts  organizations.store.svelte.ts  organizations.store.ts  organizations.svelte.ts  profiles.store.ts  projects.store.ts  projects.svelte.ts  users.store.svelte.ts  users.store.ts  users.svelte.ts
ui/src/tests/: index.test.ts
ui/src/types/: holochain.ts  ui.ts
ui/src/utils/: index.ts
ui_prototype/: package-lock.json  package.json  tailwind.config.ts
ui_prototype/src/: app.html  happening_theme.ts
ui_prototype/src/lib/: NavBar.svelte
ui_prototype/src/routes/: +layout.svelte  +page.svelte
windsurf/: README.md
windsurf/current/: NOTES.md  TASK.md
windsurf/patterns/: README.md  ui-patterns.md  ui-refactoring.md
windsurf/templates/: README.md  component-refactoring.md
windsurf/templates/docs/: technical.md
windsurf/templates/documentation/: TECHNICAL.md  holochain-api.md
windsurf/templates/features/: holochain-feature.md
windsurf/templates/prompts/: DOCUMENTATION_TASK.md  task.md
workdir/: happ.yaml  web-happ.yaml
(+108 files in other folders)
