[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [ 
  "dnas/requests_and_offers/utils",
	"dnas/*/zomes/coordinator/*",
  "dnas/*/zomes/integrity/*"
 ]

[workspace.dependencies]
hdi = "=0.3.6"
hdk = "=0.2.6"
image = "0.24" # 0.25 non stable yet
serde = "=1.0.166"

[workspace.dependencies.utils]
path = "dnas/requests_and_offers/utils"

[workspace.dependencies.administration]
path = "dnas/requests_and_offers/zomes/coordinator/administration"

[workspace.dependencies.administration_integrity]
path = "dnas/requests_and_offers/zomes/integrity/administration"

[workspace.dependencies.profiles]
path = "dnas/requests_and_offers/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/requests_and_offers/zomes/integrity/profiles"

[workspace.dependencies.misc]
path = "dnas/requests_and_offers/zomes/coordinator/misc"