[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
  "dnas/requests_and_offers/utils",
  "dnas/*/zomes/coordinator/*",
  "dnas/*/zomes/integrity/*",
]

[workspace.dependencies]
hdi = "=0.4.2"
hdk = "=0.3.2"
image = "0.24" # 0.25 non stable for rustc 1.75
serde = "1.0"
chrono = "0.3" # 0.4 compatibility error with wasm_bindgen  


[workspace.dependencies.utils]
path = "dnas/requests_and_offers/utils"

[workspace.dependencies.misc]
path = "dnas/requests_and_offers/zomes/coordinator/misc"

[workspace.dependencies.administration]
path = "dnas/requests_and_offers/zomes/coordinator/administration"

[workspace.dependencies.administration_integrity]
path = "dnas/requests_and_offers/zomes/integrity/administration"

[workspace.dependencies.users]
path = "dnas/requests_and_offers/zomes/coordinator/users"

[workspace.dependencies.users_integrity]
path = "dnas/requests_and_offers/zomes/integrity/users"
