[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = [
  "dnas/requests_and_offers/utils",
  "dnas/*/zomes/coordinator/*",
  "dnas/*/zomes/integrity/*",
]
resolver = "2"

[workspace.dependencies]
hdi = "=0.4.2"
hdk = "=0.3.2"
thiserror = "1.0"
serde = "1.0"
chrono = "0.3"    # 0.4 compatibility error with wasm_bindgen  


[workspace.dependencies.utils]
path = "dnas/requests_and_offers/utils"

[workspace.dependencies.misc]
path = "dnas/requests_and_offers/zomes/coordinator/misc"

[workspace.dependencies.administration]
path = "dnas/requests_and_offers/zomes/coordinator/administration"

[workspace.dependencies.administration_integrity]
path = "dnas/requests_and_offers/zomes/integrity/administration"

[workspace.dependencies.users_organizations]
path = "dnas/requests_and_offers/zomes/coordinator/users_organizations"

[workspace.dependencies.users_organizations_integrity]
path = "dnas/requests_and_offers/zomes/integrity/users_organizations"
