[package]
name = "administration"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "administration"

[dependencies]
hdk = { workspace = true }

serde = { workspace = true }

administration_integrity = { workspace = true }

utils = { workspace = true }

chrono = { workspace = true }
