[package]
name = "users_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "users_integrity"

[dependencies]
utils = { workspace = true }
hdi = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
image = { workspace = true }
email_address = "0.2.7"
